--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div id="output"></div>
     <div class="input-line">
       <span class="prompt">$</span>
-      <input type="text" id="input" autofocus autocomplete="off" />
+      <input type="text" id="input" autofocus autocomplete="off" autocapitalize="off" />
     </div>
   </div>
   <script>
